--- a/stylesheets/styling.css
+++ b/stylesheets/styling.css
@@ -18,7 +18,7 @@ body {
 }
 
 .completed{
-  background-color: pink;
+  background: #ff4d4d;
   border-radius: 4px;
 }
 
@@ -30,4 +30,12 @@ body {
 .submit{
   background-color: #E6E6FA;
   border-radius: 4px;
+}
+
+.done{
+  background-color: pink;
+}
+
+.parent-done{
+  text-decoration: line-through;
 }
